# GameEngine

./: .gitignore  CMakeLists.txt  README.md
assets/: manifest.json
assets/models/: SuomiKP.mtl  TestCube.mtl  TestCubeTexture.mtl
assets/shaders/: basic.frag  basic.vert  ui.frag  ui.vert
include/engine/: Engine.h  FrameTimer.h
include/engine/asset/: AssetLoader.h  AssetManager.h  AssetManifest.h  FontData.h  FontLoader.h  TextureData.h  TextureLoader.h
include/engine/math/: Types.h
include/engine/mesh/: GltfMeshLoader.h  Material.h  MeshData.h  MtlLoader.h  ObjMeshLoader.h
include/engine/physics/: BoxCollider.h  BroadPhase.h  Collider.h  CollisionDetection.h  PhysicsEngine.h  PhysicsWorld.h  RigidBody.h  SphereCollider.h
include/engine/scene/: Light.h  MaterialSystem.h  ObjectBuilder.h  SceneGraph.h  ShaderEffect.h
include/engine/vulkan/: UiVertex.h  VulkanContext.h  VulkanDevice.h  VulkanFont.h  VulkanImage.h  VulkanPipeline.h  VulkanRenderer.h  VulkanSwapchain.h
include/game/: Game.h  GameState.h  Level.h  LevelBuilder.h  LevelManager.h  PlayerController.h  SceneFactory.h
models/: SuomiKP.mtl
shaders/: basic.frag
src/: main.cpp
src/engine/: Engine.cpp  FrameTimer.cpp  Window.cpp  Window.h
src/engine/asset/: AssetLoader.cpp  AssetManager.cpp  TextureLoader.cpp
src/engine/lib/: Engine.cpp  Window.cpp
src/engine/lib/asset/: AssetLoader.cpp  AssetManager.cpp  AssetManifest.cpp  FontLoader.cpp  TextureLoader.cpp
src/engine/lib/mesh/: GltfMeshLoader.cpp  MeshData.cpp  MtlLoader.cpp
src/engine/lib/physics/: PhysicsEngine.cpp
src/engine/lib/scene/: ObjectBuilder.cpp
src/engine/lib/vulkan/: VulkanContext.cpp  VulkanDevice.cpp  VulkanFont.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp
src/engine/mesh/: GltfMeshLoader.cpp  Material.cpp  MeshData.cpp  MeshData.h  MtlLoader.cpp  ObjMeshLoader.cpp
src/engine/physics/: BoxCollider.cpp  BroadPhase.cpp  Collider.cpp  CollisionDetection.cpp  PhysicsEngine.cpp  PhysicsWorld.cpp  RigidBody.cpp  SphereCollider.cpp
src/engine/scene/: MaterialSystem.cpp  ObjectBuilder.cpp  SceneGraph.cpp  ShaderEffect.cpp
src/engine/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp
src/game/: Game.cpp  Level.cpp  LevelBuilder.cpp  LevelManager.cpp  PlayerController.cpp  SceneFactory.cpp  main.cpp
